--- a/snesreader/Makefile
+++ b/snesreader/Makefile
@@ -5,8 +5,8 @@ include nall/qt/Makefile
 
 c     := $(compiler) -xc -std=gnu99
 cpp   := $(compiler) -std=gnu++0x
-flags := -I. -Iobj
-link  :=
+flags := -I. -Iobj -I/opt//local/libexec/qt4/Library/Frameworks/QtGui.framework/Versions/4/Headers/ -I/opt//local/libexec/qt4/Library/Frameworks/QtCore.framework/Versions/4/Headers/ -I/opt//local/libexec/qt4/Library/Frameworks/QtGui.framework/Versions/4/Headers/help -I/opt//local/libexec/qt4/Library/Frameworks/QtCore.framework/Versions/4/Headers/help -I/opt//local/libexec/qt4/Library/Frameworks/QtOpenGL.framework/Versions/4/Headers/ -I/opt//local/libexec/qt4/Library/Frameworks/QtOpenGL.framework/Versions/4/Headers/help
+link  := -F/opt//local/libexec/qt4/Library/Frameworks/
 
 ifeq ($(DEBUG), 1)
   flags += -O0 -g
